## Proxy Makefile.am to install paper headers for TeX Live.
##
##   Copyright (C) 2013, 2014 Peter Breitenlohner <tex-live@tug.org>
##
##   This file is free software; the copyright holder
##   gives unlimited permission to copy and/or distribute it,
##   with or without modifications, as long as this notice is preserved.
##
LIBPAPER_LIB = $(top_srcdir)/$(LIBPAPER_TREE)/lib

hdr_links = $(LIBPAPER_LIB)/paper.h

include $(top_srcdir)/../../am/hdr_links.am

