dnl Process this file with autoconf to produce a configure script.
dnl
dnl   Copyright (C) 2009 Peter Breitenlohner <tex-live@tug.org>
dnl
dnl   This file is free software; the copyright holder
dnl   gives unlimited permission to copy and/or distribute it,
dnl   with or without modifications, as long as this notice is preserved.
dnl
AC_INIT([TeX Live auxdir auxsub], [2009], [tex-k@tug.org])
AC_PREREQ([2.65])
AC_CONFIG_SRCDIR([../../build-aux/missing])
AC_CONFIG_AUX_DIR([../../build-aux])

AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

echo "'$srcdir/configure' $ac_configure_args" >../../subsubdir-conf.cmd

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
